@@ -8,10 +8,14 @@ import example.dividend.persist.DividendRepository;
 import example.dividend.persist.entity.CompanyEntity;
 import example.dividend.persist.entity.DividendEntity;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @AllArgsConstructor
 public class FinanceService {
@@ -19,7 +23,11 @@ public class FinanceService {
     private final CompanyRepository companyRepository;
     private final DividendRepository dividendRepository;
 
+    //요청이 많이 들어오나?
+    // 자주 변경되는 데이터 인가?
+    @Cacheable(key = "#companyName", value = "finance")
     public ScrapedResult getDividendByCompanyName(String companyName) {
+        log.info("search company -> " + companyName);
 
         // 1. 회사명을 기준으로 회사 정보 조회
         CompanyEntity company = this.companyRepository.findByName(companyName)
@@ -38,16 +46,8 @@ public class FinanceService {
 //        }
 
         List<Dividend> dividends = dividendEntities
-                .stream().map(e -> Dividend.builder()
-                        .date(e.getDate())
-                        .dividend(e.getDividend())
-                        .build())
-                .toList();
+                .stream().map(e -> new Dividend(e.getDate(), e.getDividend())).collect(Collectors.toList());
 
-        return new ScrapedResult(Company.builder()
-                .ticker(company.getTicker())
-                .name(company.getName())
-                .build(),
-                dividends);
+        return new ScrapedResult(new Company(company.getTicker(), company.getName()), dividends);
     }
 }
